samples/_failures_safe/1761718020_4bc773_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e99a1ac8.c: In function ‘main’:
./samples/SAFE/__tmp_e99a1ac8.c:139:9: error: expected identifier or ‘(’ at end of input
  139 |         int src, dest,
      |         ^~~
./samples/SAFE/__tmp_e99a1ac8.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e99a1ac8.c:139:9: error: expected declaration or statement at end of input
